@@ -9,6 +9,8 @@ public class OAuth2UserClientDto {
     
     private String clientId;
     private String clientName;
+    private String description;
+    private String url;
     
     public String getClientName () {
         return clientName;
@@ -21,5 +23,17 @@ public class OAuth2UserClientDto {
     }
     public void setClientId (String clientId) {
         this.clientId = clientId;
+    }
+    public String getDescription () {
+        return description;
+    }
+    public void setDescription (String description) {
+        this.description = description;
+    }
+    public String getUrl () {
+        return url;
+    }
+    public void setUrl (String url) {
+        this.url = url;
     }
 }
